--- a/views/med_form.ejs
+++ b/views/med_form.ejs
@@ -10,6 +10,7 @@
       <link href="/stylesheets/plugins/bootstrap-datepicker.min.css" rel="stylesheet">
       <link href="/stylesheets/plugins/daterangepicker.css" rel="stylesheet">
         <link href="/stylesheets/plugins/switchery.min.css" rel="stylesheet" />
+        <link href="/sytlesheets/plugins/dropzone.css" rel="stylesheet"/>
     </head>
 
 
@@ -31,10 +32,10 @@
                 <div class="row">
 
                     <!-- Left sidebar -->
-                    <div class="col-lg-2 col-md-4">
+                    <div class="col-lg-3 col-md-4">
 
                         <div class="m-t-20">
-                            <a href="/med/new" class="btn btn-danger btn-custom btn-block waves-effect waves-light">목록으로</a>
+                            <a href="/med" class="btn btn-danger btn-custom btn-block waves-effect waves-light">목록으로</a>
 
                             <div class="list-group mail-list  m-t-20">
                                 <a href="#" class="list-group-item b-0"><i class="fa fa-download m-r-10"></i>금액높은순</a>
@@ -58,13 +59,13 @@
                     <!-- End Left sidebar -->
 
                     <!-- Right Sidebar -->
-                    <div class="col-lg-10 col-md-8">
+                    <div class="col-lg-9 col-md-8">
 
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="card-box m-t-20">
                                     <div class="p-20" style="padding:40px">
-                                        <form role="form" class="form-horizontal" action="/med/new" method="post">
+                                        <form role="form" class="form-horizontal" action="/med/new" method="post" enctype="multipart/form-data">
                                             <div class="form-group">
                                                 <input type="text" class="form-control" placeholder="제목" name="title">
                                             </div>
@@ -81,7 +82,7 @@
                                             <div class="form-group">
                                                 <div class="input-group">
                                                         
-                                                        <input type="text" class="form-control" placeholder="mm/dd/yyyy" id="datepicker-autoclose" name = "date">
+                                                        <input type="text" class="form-control" placeholder="mm/dd/yyyy" id="datepicker-autoclose" name="date">
                                                         <span class="input-group-addon bg-primary b-0 text-white"><i class="ion-calendar"></i></span>
                                                         
                                                 </div><!-- input-group -->
@@ -109,15 +110,21 @@
 
                                             <!--    </div>-->
                                             <!--</div>-->
-
-
+                                            <span class="upload">
+                                            
+                                                   <input type="file" class="btn btn-purple waves-effect waves-light" name="profile"  >
+                                            </span>
+                                            
                                             <div class="btn-toolbar form-group m-b-0">
                                                 <div class="pull-right">
+                                                    
                                                     <button class="btn btn-purple waves-effect waves-light"> <span>등록하기</span> <i class="fa fa-send m-l-10"></i> </button>
                                                 </div>
                                             </div>
 
                                         </form>
+                                        
+                                        
                                     </div>
                                 </div>
 
@@ -162,6 +169,7 @@
         <script src="/js/plugins/bootstrap-colorpicker.min.js"></script>
         <script src="/js/plugins/bootstrap-datepicker.min.js"></script>
         <script src="/js/plugins/daterangepicker.js"></script>
+        <script src="/js/plugins/dropzone.js"></script>
         <script>
             jQuery(document).ready(function () {
 
