--- a/views/login_new.ejs
+++ b/views/login_new.ejs
@@ -25,10 +25,12 @@
 
         <div class="wrapper-page">
 
+<div class="col-xs-12">
+        
             <div class="text-center">
                 <a href="/" class="logo logo-lg"><img src="/images/data-logo.png"></a>
             </div>
-
+</div>
             <form class="form-horizontal m-t-20" id="user" action="/login/new" method="post">
                 <div class="form-group">
                     <div class="col-xs-12">
