--- a/views/index.ejs
+++ b/views/index.ejs
@@ -314,14 +314,48 @@
                                             <td><span class="label label-warning">Coming soon</span></td>
                                         </tr>
                                         <tr>
-                                            <td>6</td>
+                                            <td>7</td>
                                             <td>Minton Admin v1.3</td>
                                             <td>01/01/2016</td>
                                             <td>31/05/2016</td>
                                             <td>Minton admin</td>
                                             <td><span class="label label-warning">Coming soon</span></td>
                                         </tr>
-
+                                        
+                                        <tr>
+                                            <td>8</td>
+                                            <td>Minton Admin v1.3</td>
+                                            <td>01/01/2016</td>
+                                            <td>31/05/2016</td>
+                                            <td>Minton admin</td>
+                                            <td><span class="label label-warning">Coming soon</span></td>
+                                        </tr>
+                                        
+                                         <tr>
+                                            <td>9</td>
+                                            <td>Minton Admin v1.3</td>
+                                            <td>01/01/2016</td>
+                                            <td>31/05/2016</td>
+                                            <td>Minton admin</td>
+                                            <td><span class="label label-warning">Coming soon</span></td>
+                                        </tr>
+                                         <tr>
+                                            <td>10</td>
+                                            <td>Minton Admin v1.3</td>
+                                            <td>01/01/2016</td>
+                                            <td>31/05/2016</td>
+                                            <td>Minton admin</td>
+                                            <td><span class="label label-warning">Coming soon</span></td>
+                                        </tr>
+                                         <tr>
+                                            <td>11</td>
+                                            <td>Minton Admin v1.3</td>
+                                            <td>01/01/2016</td>
+                                            <td>31/05/2016</td>
+                                            <td>Minton admin</td>
+                                            <td><span class="label label-warning">Coming soon</span></td>
+                                        </tr>
+                                     
                                     </tbody>
                                 </table>
                             </div>
@@ -332,33 +366,56 @@
                     <div class="col-lg-4">
                         <div class="card-box widget-user">
                             <div>
-                                <img src="/images/avatar-1.jpg" class="img-responsive img-circle" alt="user">
+                                <img src="/images/gom.jpg" class="img-responsive img-circle" alt="user">
                                 <div class="wid-u-info">
-                                    <h4 class="m-t-0 m-b-5">빼면 넣을게 없다!!</h4>
-                                    <p class="text-muted m-b-5 font-13">coderthemes@gmail.com</p>
-                                    <small class="text-warning"><b>Admin</b></small>
+                                    <h4 class="m-t-0 m-b-5">정예지</h4></h4>
+                                    <p class="text-muted m-b-5 font-13">yesBear@gmail.com</p>
+                                    <small class="text-warning"><b>CEO</b></small>
                                 </div>
                             </div>
                         </div>
 
                         <div class="card-box widget-user">
                             <div>
-                                <img src="/images/avatar-1.jpg" class="img-responsive img-circle" alt="user">
+                                <img src="/images/gojack.jpg" class="img-responsive img-circle" alt="user">
                                 <div class="wid-u-info">
-                                    <h4 class="m-t-0 m-b-5">게시판 크기 늘려도되는데</h4>
-                                    <p class="text-muted m-b-5 font-13">coderthemes@gmail.com</p>
-                                    <small class="text-success"><b>User</b></small>
+                                    <h4 class="m-t-0 m-b-5">윤원진</h4></h4>
+                                    <p class="text-muted m-b-5 font-13">chairman@gmail.com</p>
+                                    <small class="text-warning"><b>Investor</b></small>
                                 </div>
                             </div>
                         </div>
 
                         <div class="card-box widget-user">
                             <div>
-                                <img src="/images/avatar-1.jpg" class="img-responsive img-circle" alt="user">
+                                <img src="/images/sudal.jpg" class="img-responsive img-circle" alt="user">
                                 <div class="wid-u-info">
-                                    <h4 class="m-t-0 m-b-5">그럼 또 별로 안이쁨</h4>
-                                    <p class="text-muted m-b-5 font-13">coderthemes@gmail.com</p>
-                                    <small class="text-pink"><b>Admin</b></small>
+                                    <h4 class="m-t-0 m-b-5">정다운</h4>
+                                    <p class="text-muted m-b-5 font-13">downdown@gmail.com</p>
+                                    <small class="text-success"><b>Server Administrator</b></small>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card-box widget-user">
+                            <div>
+                                <img src="/images/meggy.jpg" class="img-responsive img-circle" alt="user">
+                                <div class="wid-u-info">
+                                    <h4 class="m-t-0 m-b-5">박소윤</h4>
+                                    <p class="text-muted m-b-5 font-13">psy@gmail.com</p>
+                                    <small class="text-pink"><b>Front-end Master</b></small>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="card-box widget-user">
+                            <div>
+                                <img src="/images/cat.jpg" class="img-responsive img-circle" alt="user">
+                                <div class="wid-u-info">
+                                    <h4 class="m-t-0 m-b-5">김동은</h4>
+                                    <p class="text-muted m-b-5 font-13">mimi@gmail.com</p>
+                                    <small class="text-pink"><b>Designer</b></small>
                                 </div>
                             </div>
                         </div>
