--- a/views/error.ejs
+++ b/views/error.ejs
@@ -15,12 +15,12 @@
       width: auto;
       height: auto;
       overflow: hidden;
-      
     }
 
     #error {
         color: white;  
-        font-size: 100px;
+        font-size: 50px;
+        font-family: 'SDMiSaeng';
     }
     
     </style>
