--- a/views/login_new.ejs
+++ b/views/login_new.ejs
@@ -1,10 +1,11 @@
-    <% include main%>
-    <style>
+<% include main%>
+<style>
     html, body {
       overflow-y:hidden;
       height:100%;
     }
-         #video { 
+    
+    #video { 
       position: absolute;
       top: 0px;
       left: 0px;
@@ -12,11 +13,11 @@
       min-height: 100%;
       width: auto;
       height: auto;
-     
       overflow: hidden;
     }
 
-    </style>
+</style>
+
 </head>
 
     <body class="login">
@@ -24,13 +25,73 @@
  </video>
 
         <div class="wrapper-page">
-
-<div class="col-xs-12">
         
-            <div class="text-center">
-                <a href="/" class="logo logo-lg"><img src="/images/data-logo.png"></a>
+            <div class="col-xs-12">
+        
+                <div class="text-center">
+                    <a href="/" class="logo logo-lg"><img src="/images/data-logo.png"></a>
+                </div>
             </div>
-</div>
+            
+             <div class="col-lg-12">
+                        <!--<div class="card-box p-b-0">-->
+                            
+                            <form id="commentForm" method="get" action="" class="form-horizontal">
+                                <div id="rootwizard" class="pull-in">
+                                    <ul>
+                                        <li><a href="#first" data-toggle="tab">First</a></li>
+                                        <li><a href="#second" data-toggle="tab">Second</a></li>
+                                        <li><a href="#third" data-toggle="tab">Third</a></li>
+                                    </ul>
+                                    <div class="tab-content m-b-0 bx-s-0">
+                                        <div class="tab-pane fade" id="first">
+                                            <div class="control-group">
+                                                <label class="control-label" for="emailfield">Email</label>
+                                                <div class="controls">
+                                                    <input type="text" id="emailfield" name="emailfield"
+                                                           class="required email form-control">
+                                                </div>
+                                            </div>
+
+                                            <div class="control-group">
+                                                <label class="control-label" for="namefield">Name</label>
+                                                <div class="controls">
+                                                    <input type="text" id="namefield" name="namefield"
+                                                           class="required form-control">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="tab-pane fade" id="second">
+                                            <div class="control-group">
+                                                <label class="control-label" for="urlfield">URL</label>
+                                                <div class="controls">
+                                                    <input type="text" id="urlfield" name="urlfield"
+                                                           class="required url form-control">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="tab-pane fade" id="third">
+                                            <div class="form-group clearfix">
+                                                <div class="col-lg-12">
+                                                    <div class="checkbox checkbox-primary">
+                                                        <input id="checkbox-h3" type="checkbox">
+                                                        <label for="checkbox-h3">
+                                                            I agree with the Terms and Conditions.
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <ul class="pager m-b-0 wizard">
+                                            <li class="previous"><a href="#" class="btn btn-primary waves-effect waves-light">Previous</a></li>
+                                            <li class="next"><a href="#" class="btn btn-primary waves-effect waves-light">Next</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </form>
+
+                        <!--</div>-->
+                    </div>
             <form class="form-horizontal m-t-20" id="user" action="/login/new" method="post">
                 <div class="form-group">
                     <div class="col-xs-12">
@@ -41,14 +102,14 @@
                 
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Password" name="user[password]">
+                        <input class="form-control" type="password" required="" placeholder="비밀번호 입력" name="user[password]">
                         <i class="md md-vpn-key form-control-feedback l-h-34"></i>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Password" name="user[passwordConfirmation]">
-                        <i class="md md-vpn-key form-control-feedback l-h-34"></i>
+                        <input class="form-control" type="password" required="" placeholder="비밀번호 확인" name="user[passwordConfirmation]">
+                        <i class="md md-done form-control-feedback l-h-34"></i>
                     </div>
                 </div>
                 
@@ -102,7 +163,58 @@
         <!-- Main  -->
         <% include mainjs%>
 
+       <!-- Form wizard -->
+        <script src="/js/plugins/jquery.bootstrap.wizard.js"></script>
+        <script src="/js/plugins/jquery.validate.min.js"></script>
+
        
+       
+       <script type="text/javascript">
+            $(document).ready(function() {
+                $('#basicwizard').bootstrapWizard({'tabClass': 'nav nav-tabs navtab-custom nav-justified bg-muted'});
+
+                $('#progressbarwizard').bootstrapWizard({onTabShow: function(tab, navigation, index) {
+                    var $total = navigation.find('li').length;
+                    var $current = index+1;
+                    var $percent = ($current/$total) * 100;
+                    $('#progressbarwizard').find('.bar').css({width:$percent+'%'});
+                },
+                'tabClass': 'nav nav-tabs navtab-custom nav-justified bg-muted'});
+
+                $('#btnwizard').bootstrapWizard({'tabClass': 'nav nav-tabs navtab-custom nav-justified bg-muted','nextSelector': '.button-next', 'previousSelector': '.button-previous', 'firstSelector': '.button-first', 'lastSelector': '.button-last'});
+
+                var $validator = $("#commentForm").validate({
+                    rules: {
+                        emailfield: {
+                            required: true,
+                            email: true,
+                            minlength: 3
+                        },
+                        namefield: {
+                            required: true,
+                            minlength: 3
+                        },
+                        urlfield: {
+                            required: true,
+                            minlength: 3,
+                            url: true
+                        }
+                    }
+                });
+
+                $('#rootwizard').bootstrapWizard({
+                    'tabClass': 'nav nav-tabs navtab-custom nav-justified bg-muted',
+                    'onNext': function (tab, navigation, index) {
+                        var $valid = $("#commentForm").valid();
+                        if (!$valid) {
+                            $validator.focusInvalid();
+                            return false;
+                        }
+                    }
+                });
+            });
+
+        </script>
 	
 	</body>
 </html>
