--- a/views/med_form.ejs
+++ b/views/med_form.ejs
@@ -65,7 +65,7 @@
                             <div class="col-sm-12">
                                 <div class="card-box m-t-20">
                                     <div class="p-20" style="padding:40px">
-                                        <form role="form" class="form-horizontal" action="/med/new" method="post" enctype="multipart/form-data">
+                                        <form role="form" class="form-horizontal" action="/med/new" method="post">
                                             <div class="form-group">
                                                 <input type="text" class="form-control" placeholder="제목" name="title">
                                             </div>
@@ -110,10 +110,10 @@
 
                                             <!--    </div>-->
                                             <!--</div>-->
-                                            <span class="upload">
+                                            <!--<span class="upload">-->
                                             
-                                                   <input type="file" class="btn btn-purple waves-effect waves-light" name="profile"  >
-                                            </span>
+                                            <!--       <input type="file" class="btn btn-purple waves-effect waves-light" name="profile"  >-->
+                                            <!--</span>-->
                                             
                                             <div class="btn-toolbar form-group m-b-0">
                                                 <div class="pull-right">
