--- a/views/login_new.ejs
+++ b/views/login_new.ejs
@@ -1,7 +1,7 @@
 <% include main%>
 <style>
     html, body {
-      overflow-y:hidden;
+      /*overflow-y:hidden;*/
       height:100%;
     }
     
@@ -34,64 +34,118 @@
             </div>
             
              <div class="col-lg-12">
-                        <!--<div class="card-box p-b-0">-->
+                        <form class="form-horizontal m-t-20" id="user" action="/login/new" method="post">
+                            <div id="progressbarwizard" class="pull-in">
+                                <ul style="visibility:hidden">
+                                    <li><a href="#account-2" data-toggle="tab">Account</a></li>
+                                    <li><a href="#profile-tab-2" data-toggle="tab">Profile</a></li>
+                                    <li><a href="#finish-2" data-toggle="tab">Finish</a></li>
+                                </ul>
+
+                                <div class="tab-content bx-s-0 m-b-0">
+                                    
+                                    
+                                    <div class="text-center">
+                                        <a href="/" class="logo logo-lg"><img src="/images/data-logo.png"></a>
+                                    </div>
+                                    
+                                    
+                                    <div id="bar" class="progress progress-striped active">
+                                        <div class="bar progress-bar progress-bar-primary"></div>
+                                    </div>
+
+                                    <div class="tab-pane p-t-10 fade" id="account-2">
+                                        <div class="row">
+                                            <div class="form-group">
+                                                <div class="col-xs-12">
+                                                    <input class="form-control" type="text" required="" placeholder="아이디 입력" name="user[uid]">
+                                                    <i class="md md-perm-identity form-control-feedback l-h-34"></i>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="col-xs-12">
+                                                    <input class="form-control" type="password" required="" placeholder="비밀번호 입력" name="user[password]">
+                                                    <i class="md md-vpn-key form-control-feedback l-h-34"></i>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="col-xs-12">
+                                                    <input class="form-control" type="password" required="" placeholder="비밀번호 확인" name="user[passwordConfirmation]">
+                                                    <i class="md md-done form-control-feedback l-h-34"></i>
+                                                </div>
+                                            </div>
+                                            
+                                             <div class="form-group">
+                                                <div class="col-xs-12">
+                                                    <input class="form-control" type="email" required="" placeholder="Email" name="user[email]">
+                                                    <i class="md md-email form-control-feedback l-h-34"></i>
+                                                </div>
+                                            </div>
                             
-                            <form id="commentForm" method="get" action="" class="form-horizontal">
-                                <div id="rootwizard" class="pull-in">
-                                    <ul>
-                                        <li><a href="#first" data-toggle="tab">First</a></li>
-                                        <li><a href="#second" data-toggle="tab">Second</a></li>
-                                        <li><a href="#third" data-toggle="tab">Third</a></li>
-                                    </ul>
-                                    <div class="tab-content m-b-0 bx-s-0">
-                                        <div class="tab-pane fade" id="first">
-                                            <div class="control-group">
-                                                <label class="control-label" for="emailfield">Email</label>
-                                                <div class="controls">
-                                                    <input type="text" id="emailfield" name="emailfield"
-                                                           class="required email form-control">
+                                            <div class="form-group">
+                                                <div class="col-xs-12">
+                                                    <input class="form-control" type="text" required="" placeholder="이용자 이름" name="user[name]">
+                                                    <i class="md md-account-circle form-control-feedback l-h-34"></i>
+                                                </div>
+                                            </div>
+                                            
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane p-t-10 fade" id="profile-tab-2">
+                                        <div class="row">
+                                            <div class="form-group clearfix">
+                                                <label class="col-lg-2 control-label" for="name1"> First name *</label>
+                                                <div class="col-lg-10">
+                                                    <input id="name1" name="name" type="text" class="required form-control">
+                                                </div>
+                                            </div>
+                                            <div class="form-group clearfix">
+                                                <label class="col-lg-2 control-label " for="surname1"> Last name *</label>
+                                                <div class="col-lg-10">
+                                                    <input id="surname1" name="surname" type="text" class="required form-control">
+
                                                 </div>
                                             </div>
 
-                                            <div class="control-group">
-                                                <label class="control-label" for="namefield">Name</label>
-                                                <div class="controls">
-                                                    <input type="text" id="namefield" name="namefield"
-                                                           class="required form-control">
+                                            <div class="form-group clearfix">
+                                                <label class="col-lg-2 control-label " for="email1">Email *</label>
+                                                <div class="col-lg-10">
+                                                    <input id="email1" name="email" type="text" class="required email form-control">
                                                 </div>
                                             </div>
+
                                         </div>
-                                        <div class="tab-pane fade" id="second">
-                                            <div class="control-group">
-                                                <label class="control-label" for="urlfield">URL</label>
-                                                <div class="controls">
-                                                    <input type="text" id="urlfield" name="urlfield"
-                                                           class="required url form-control">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="tab-pane fade" id="third">
+                                    </div>
+                                    <div class="tab-pane p-t-10 fade" id="finish-2">
+                                        <div class="row">
                                             <div class="form-group clearfix">
                                                 <div class="col-lg-12">
                                                     <div class="checkbox checkbox-primary">
-                                                        <input id="checkbox-h3" type="checkbox">
-                                                        <label for="checkbox-h3">
+                                                        <input id="checkbox-h1" type="checkbox">
+                                                        <label for="checkbox-h1">
                                                             I agree with the Terms and Conditions.
                                                         </label>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <ul class="pager m-b-0 wizard">
-                                            <li class="previous"><a href="#" class="btn btn-primary waves-effect waves-light">Previous</a></li>
-                                            <li class="next"><a href="#" class="btn btn-primary waves-effect waves-light">Next</a></li>
-                                        </ul>
                                     </div>
+                                    <ul class="pager m-b-0 wizard">
+                                        <li class="previous first" style="display:none;"><a href="#">First</a>
+                                        </li>
+                                        <li class="previous"><a href="#" class="btn btn-primary waves-effect waves-light">Previous</a></li>
+                                        <li class="next last" style="display:none;"><a href="#">Last</a></li>
+                                        <li class="next"><a href="#" class="btn btn-primary waves-effect waves-light">Next</a></li>
+                                    </ul>
                                 </div>
-                            </form>
-
+                            </div>
+                            
+                            
+                        </form>    
                         <!--</div>-->
                     </div>
+                    
+                
             <form class="form-horizontal m-t-20" id="user" action="/login/new" method="post">
                 <div class="form-group">
                     <div class="col-xs-12">
