--- a/views/my_show.ejs
+++ b/views/my_show.ejs
@@ -8,7 +8,7 @@
     <body>
 
 
-        <%include navbar%>
+        <% include navbar %>
         <!-- End Navigation Bar-->
 
 
@@ -37,7 +37,7 @@
                                 </div>
 
                                 <div class="">
-                                    <h4 class="m-b-5">Mark A. McKnight</h4>
+                                    <h4 class="m-b-5"><%=data.userinfo.name%></h4>
                                     <p class="text-muted">@webdesigner</p>
                                 </div>
 
@@ -46,13 +46,13 @@
 
 
                                 <div class="text-left m-t-40">
-                                    <p class="text-muted font-13"><strong>Full Name :</strong> <span class="m-l-15">Johnathan Deo</span></p>
+                                    <p class="text-muted font-13"><strong>Full Name :</strong> <span class="m-l-15"><%=data.userinfo.name%></span></p>
 
-                                    <p class="text-muted font-13"><strong>Mobile :</strong><span class="m-l-15">(123) 123 1234</span></p>
+                                    <p class="text-muted font-13"><strong>Mobile :</strong><span class="m-l-15"><%=data.userinfo.contact%></span></p>
 
-                                    <p class="text-muted font-13"><strong>Email :</strong> <span class="m-l-15">coderthemes@gmail.com</span></p>
+                                    <p class="text-muted font-13"><strong>Email :</strong> <span class="m-l-15"><%=data.userinfo.email%></span></p>
 
-                                    <p class="text-muted font-13"><strong>Location :</strong> <span class="m-l-15">USA</span></p>
+                                    <p class="text-muted font-13"><strong>Point :</strong> <span class="m-l-15"><%=data.userinfo.point%></span></p>
                                 </div>
 
 
@@ -106,13 +106,17 @@
                                                 </div>
                                             </div>
                                             <tbody>
-                                                <% data.forEach(function(d) {%>
-                                                <tr>
-                                                    <td style="text-align: center;"><button class="demo-delete-row btn btn-danger btn-xs btn-icon fa fa-times"></button></td>
-                                                   
-                                                </tr>
-                                                <% }) %>
 
+                                                <%for(var i=0; i < data.medinfo.length ;i++){%>
+                                                
+                                                <tr>
+                                                    <td><%= data.medinfo[i].title%></td>
+                                                    <td><%= data.medinfo[i].summary%></td>
+                                                    <td><%= data.medinfo[i].due_date%></td>
+                                                    <td style="text-align: center;"><button class="demo-delete-row btn btn-danger btn-xs btn-icon fa fa-times"></button></td>
+                                      
+                                                </tr>
+                                                <%} %>
                                                 
                                             </tbody>
                                             <tfoot>
@@ -128,28 +132,32 @@
                                     </div>
                                     
                                     <div class="tab-pane" id="settings">
-                                        <form role="form">
+                                        <form role="form" action="/my/?_method=put" method="post" id="user">
                                             <div class="form-group">
                                                 <label for="FullName">사용자 아이디</label>
-                                                <input type="text" value="John Doe" id="FullName" class="form-control" readonly>
+                                                <input type="text" value="<%=data.userinfo.uid%>" id="FullName"  class="form-control" readonly>
                                             </div>
                                             <div class="form-group">
                                                 <label for="Email">Email</label>
-                                                <input type="email" value="first.last@example.com" id="Email" class="form-control">
+                                                <input type="email" value="<%=data.userinfo.email%>" id="Email" name="user[email]"class="form-control">
                                             </div>
                                             <div class="form-group">
                                                 <label for="Username">Username</label>
-                                                <input type="text" value="john" id="Username" class="form-control">
+                                                <input type="text" value="<%=data.userinfo.name%>" id="Username"  name="user[name]" class="form-control">
                                             </div>
                                             <div class="form-group">
-                                                <label for="Password">Password</label>
-                                                <input type="password" placeholder="6 - 15 Characters" id="Password" class="form-control">
+                                                <label for="Password">OLD Password</label>
+                                                <input type="password" placeholder="6 - 15 Characters" id="Password" name="user[password]" class="form-control">
                                             </div>
                                             <div class="form-group">
-                                                <label for="RePassword">Re-Password</label>
-                                                <input type="password" placeholder="6 - 15 Characters" id="RePassword" class="form-control">
+                                                <label for="RePassword">NEWPassword</label>
+                                                <input type="password" placeholder="6 - 15 Characters" id="RePassword"name="user[newpassword1]" class="form-control">
                                             </div>
                                             
+                                            <div class="form-group">
+                                                <label for="RePassword">Re-Password</label><%= passwordError?passwordError:""%>
+                                                <input type="password" placeholder="6 - 15 Characters" id="RePassword"name="user[newpassword2]" class="form-control">
+                                            </div>
                                             <button class="btn btn-primary waves-effect waves-light w-md" type="submit">Save</button>
                                         </form>
                                     </div>
@@ -160,7 +168,6 @@
                     </div> <!-- end col -->
                 </div>
                 <!-- end row -->
-
 
                 <!-- Footer -->
                 <footer class="footer text-right">
