med_form 이메일 추가

--- a/views/med_form.ejs
+++ b/views/med_form.ejs
@@ -72,7 +72,7 @@
                                             <div class="form-group">
                                                 <div class="row">
                                                     <div class="col-md-6">
-                                                        <input type="email" class="form-control" placeholder="담당자연락처" name="email">
+                                                        <input type="email" class="form-control" placeholder="담당자연락처" name="email" value="<%data.email%>">
                                                     </div>
                                                     <div class="col-md-6">
                                                         <input type="number" class="form-control" placeholder="예상금액" name="pay">
