--- a/views/med.ejs
+++ b/views/med.ejs
@@ -96,10 +96,10 @@
                                     </div>            
                                     <div class="col-lg-3"></div>            
                                            
-                                    
                                 </div>
                                 </div>
                                 <tbody>
+                                <%for(var i=0;i<10;i++){ %>
                                     <tr>
                                         <td>Isidra</td>
                                         <td>Boudreaux</td>
@@ -107,209 +107,7 @@
                                         <td>22 Jun 1972</td>
                                         <td><span class="label label-table label-success">Active</span></td>
                                     </tr>
-                                    <tr>
-                                        <td>Shona</td>
-                                        <td>Woldt</td>
-                                        <td>Airline Transport Pilot</td>
-                                        <td>3 Oct 1981</td>
-                                        <td><span class="label label-table label-inverse">Disabled</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Granville</td>
-                                        <td>Leonardo</td>
-                                        <td>Business Services Sales Representative</td>
-                                        <td>19 Apr 1969</td>
-                                        <td><span class="label label-table label-danger">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Easer</td>
-                                        <td>Dragoo</td>
-                                        <td>Drywall Stripper</td>
-                                        <td>13 Dec 1977</td>
-                                        <td><span class="label label-table label-success">Active</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Maple</td>
-                                        <td>Halladay</td>
-                                        <td>Aviation Tactical Readiness Officer</td>
-                                        <td>30 Dec 1991</td>
-                                        <td><span class="label label-table label-danger">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Maxine</td>
-                                        <td><a href="#">Woldt</a></td>
-                                        <td><a href="#">Business Services Sales Representative</a></td>
-                                        <td>17 Oct 1987</td>
-                                        <td><span class="label label-table label-inverse">Disabled</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Lorraine</td>
-                                        <td>Mcgaughy</td>
-                                        <td>Hemodialysis Technician</td>
-                                        <td>11 Nov 1983</td>
-                                        <td><span class="label label-table label-inverse">Disabled</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Lizzee</td>
-                                        <td><a href="#">Goodlow</a></td>
-                                        <td>Technical Services Librarian</td>
-                                        <td>1 Nov 1961</td>
-                                        <td><span class="label label-table label-danger">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Judi</td>
-                                        <td>Badgett</td>
-                                        <td>Electrical Lineworker</td>
-                                        <td>23 Jun 1981</td>
-                                        <td><span class="label label-table label-success">Active</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Lauri</td>
-                                        <td>Hyland</td>
-                                        <td>Blackjack Supervisor</td>
-                                        <td>15 Nov 1985</td>
-                                        <td><span class="label label-table label-danger">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Isidra</td>
-                                        <td>Boudreaux</td>
-                                        <td>Traffic Court Referee</td>
-                                        <td>22 Jun 1972</td>
-                                        <td><span class="label label-table label-success">Active</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Shona</td>
-                                        <td>Woldt</td>
-                                        <td>Airline Transport Pilot</td>
-                                        <td>3 Oct 1981</td>
-                                        <td><span class="label label-table label-inverse">Disabled</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Granville</td>
-                                        <td>Leonardo</td>
-                                        <td>Business Services Sales Representative</td>
-                                        <td>19 Apr 1969</td>
-                                        <td><span class="label label-table label-danger">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Easer</td>
-                                        <td>Dragoo</td>
-                                        <td>Drywall Stripper</td>
-                                        <td>13 Dec 1977</td>
-                                        <td><span class="label label-table label-success">Active</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Maple</td>
-                                        <td>Halladay</td>
-                                        <td>Aviation Tactical Readiness Officer</td>
-                                        <td>30 Dec 1991</td>
-                                        <td><span class="label label-table label-danger">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Maxine</td>
-                                        <td><a href="#">Woldt</a></td>
-                                        <td><a href="#">Business Services Sales Representative</a></td>
-                                        <td>17 Oct 1987</td>
-                                        <td><span class="label label-table label-inverse">Disabled</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Lorraine</td>
-                                        <td>Mcgaughy</td>
-                                        <td>Hemodialysis Technician</td>
-                                        <td>11 Nov 1983</td>
-                                        <td><span class="label label-table label-inverse">Disabled</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Lizzee</td>
-                                        <td><a href="#">Goodlow</a></td>
-                                        <td>Technical Services Librarian</td>
-                                        <td>1 Nov 1961</td>
-                                        <td><span class="label label-table label-danger">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Judi</td>
-                                        <td>Badgett</td>
-                                        <td>Electrical Lineworker</td>
-                                        <td>23 Jun 1981</td>
-                                        <td><span class="label label-table label-success">Active</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Lauri</td>
-                                        <td>Hyland</td>
-                                        <td>Blackjack Supervisor</td>
-                                        <td>15 Nov 1985</td>
-                                        <td><span class="label label-table label-danger">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Isidra</td>
-                                        <td>Boudreaux</td>
-                                        <td>Traffic Court Referee</td>
-                                        <td>22 Jun 1972</td>
-                                        <td><span class="label label-table label-success">Active</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Shona</td>
-                                        <td>Woldt</td>
-                                        <td>Airline Transport Pilot</td>
-                                        <td>3 Oct 1981</td>
-                                        <td><span class="label label-table label-inverse">Disabled</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Granville</td>
-                                        <td>Leonardo</td>
-                                        <td>Business Services Sales Representative</td>
-                                        <td>19 Apr 1969</td>
-                                        <td><span class="label label-table label-danger">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Easer</td>
-                                        <td>Dragoo</td>
-                                        <td>Drywall Stripper</td>
-                                        <td>13 Dec 1977</td>
-                                        <td><span class="label label-table label-success">Active</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Maple</td>
-                                        <td>Halladay</td>
-                                        <td>Aviation Tactical Readiness Officer</td>
-                                        <td>30 Dec 1991</td>
-                                        <td><span class="label label-table label-danger">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Maxine</td>
-                                        <td><a href="#">Woldt</a></td>
-                                        <td><a href="#">Business Services Sales Representative</a></td>
-                                        <td>17 Oct 1987</td>
-                                        <td><span class="label label-table label-inverse">Disabled</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Lorraine</td>
-                                        <td>Mcgaughy</td>
-                                        <td>Hemodialysis Technician</td>
-                                        <td>11 Nov 1983</td>
-                                        <td><span class="label label-table label-inverse">Disabled</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Lizzee</td>
-                                        <td><a href="#">Goodlow</a></td>
-                                        <td>Technical Services Librarian</td>
-                                        <td>1 Nov 1961</td>
-                                        <td><span class="label label-table label-danger">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Judi</td>
-                                        <td>Badgett</td>
-                                        <td>Electrical Lineworker</td>
-                                        <td>23 Jun 1981</td>
-                                        <td><span class="label label-table label-success">Active</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Lauri</td>
-                                        <td>Hyland</td>
-                                        <td>Blackjack Supervisor</td>
-                                        <td>15 Nov 1985</td>
-                                        <td><span class="label label-table label-danger">Suspended</span></td>
-                                    </tr>
+                                <% } %>    
                                 </tbody>
                                 <tfoot>
                                     <tr>
